updated project structure and implemented login/signup apis
