# src/models/requests/signup.request.ts
@@ -1,0 +1,5 @@
+export interface ISignupRequest{
+    email:string;
+    password:string;
+    company:string;
+}
